test-suite/invalid/person-broken-reference.glx
# TEST: person-broken-reference
# EXPECT: invalid
# ERROR: "place 'place-nonexistent' not found"
# DESCRIPTION: Person birth place must reference existing place

id: person-i9j0k1l2
version: "1.0"
type: person
name:
  given: John
  surname: Smith
  display: John Smith
birth:
  place: place-nonexistent  # This place doesn't exist
